# hevc-transcoder

./: .codeclimate.yml  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml  env.asc  pyproject.toml  run.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codecov.yml  dependabot.yml  docker-hevc-download.yml  docker-hevc-portainer.yml  docker-hevc-processor.yml  docker-hevc-upload.yml  docker-portainer-api-client.yml  pipeline.yml  publish-docker-image.yml  terraform.yml
bootstrap/: github-oidc-role.tf  providers.tf
deploy-scripts/: alpine.sh  nextcloud-sync.sh  process.sh  trigger.sh  upload.sh
docker/: run.sh
docker/hevc-download/: Dockerfile  run.sh
docker/hevc-portainer/: Dockerfile  app.py  download.sh  nextcloud-sync.sh  process.py  process.sh  pyproject.toml  trigger.py  upload.sh
docker/hevc-processor/: Dockerfile
hevc-portainer/: Dockerfile  app.py  pyproject.toml
hevc-portainer/hevc_portainer/: processor.py  video_file.py
hevc-portainer/processor/: processor.py  video_file.py
hevc-portainer/tests/: conftest.py  test_processor.py  test_video_file.py
hevc-portainer/tests/processor/: conftest.py  test_processor.py  test_video_file.py
hevc-processor/: Dockerfile  app.py  pyproject.toml  run.sh
hevc_transcoder/: logging_config.py  processor.py  transcoder.py  video_file.py
portainer/: alpine.sh  download.sh  env.asc  nextcloud-sync.sh  trigger.sh  upload.sh
scripts/: full-run.sh  manual-run-spot.sh  manual-run.sh
terraform/: ecr.tf  ecs.tf  eventbridge.tf  fargate.tf  iam.tf  output.tf  providers.tf  remote-state.tf  s3.tf  sqs.tf  state.tf  terraform.tfvars  variables.tf
tests/: test_processor.py  test_transcoder.py  test_video_file.py
(+12 files in other folders)
