[tool.poetry]
name = "hevc-transcoder"
version = "0.1.0"
description = ""
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.33"
python-ffmpeg = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
moto = "^4.2"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
