[tool.poetry]
name = "hevc-transcoder"
version = "0.1.0"
description = ""
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.36"
python-ffmpeg = "^2.0"
python-json-logger = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
moto = "^5.0"
pytest-cov = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
