[tool.poetry]
name = "hevc-transcoder"
version = "0.1.0"
description = ""
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.40"
python-ffmpeg = "^2.0"
python-json-logger = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4"
moto = "^5.1"
pytest-cov = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
