[tool.poetry]
name = "hevc-portainer"
version = "0.1.0"
description = ""
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.62"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
moto = "^4.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
